[add] store page

--- a/src/Web/Views/Shared/Subscriptions.cshtml
+++ b/src/Web/Views/Shared/Subscriptions.cshtml
@@ -10,7 +10,7 @@
         <div class="col-3 m-3 item-store">
             <div class="p-3 text-center">
                 <div>
-                    <div class="item-image" style="background-image: url(https://st3.depositphotos.com/9684382/15068/v/1600/depositphotos_150681678-stock-illustration-bronze-trophy-cup-vector.jpg);"></div>
+                    <div class="item-image bronzecup"></div>
                 </div>
                 <div class="d-flex justify-content-between">
                     <label class="text-muted" for="">Low value</label>
@@ -27,7 +27,7 @@
                 <hr>
                 @if(ViewBag.SubId != 0)
                 {
-                    <form asp-action="ChangeSub">
+                    <form asp-action="ChangeSubForMe" method="POST">
                         <input hidden type="text" name="subId" value="0">
                         <button class="btn btn-outline-primary" type="submit">Switch</button>
                     </form>
@@ -44,7 +44,7 @@
         <div class="col-3 m-3 item-store">
             <div class="p-3 text-center">
                 <div>
-                    <div class="item-image" style="background-image: url(https://previews.123rf.com/images/artinspiring/artinspiring1606/artinspiring160600112/58099289-isolated-silver-cup-on-white-background-concept-of-prize-leadership-winning-and-success-winner-award.jpg);"></div>
+                    <div class="item-image silvercup"></div>
                 </div>
                 <div class="d-flex justify-content-between">
                     <label class="text-muted" for="">Medium value</label>
@@ -54,14 +54,14 @@
                         <i class="glyphicon glyphicon-star-empty text-muted" aria-hidden="true"></i>
                     </div>
                 </div>
-                <h4>Silver Subscription</h4>
+                <h4 class="text-muted">Silver Subscription</h4>
                 <div>
-                    <p>5 projects</p>
+                    <p class="text-muted">5 projects</p>
                 </div>
                 <hr>
                 @if(ViewBag.SubId != 1)
                 {
-                    <form asp-action="ChangeSub">
+                    <form asp-action="ChangeSubForMe" method="POST">
                         <input hidden type="text" name="subId" value="1">
                         <button class="btn btn-outline-primary" type="submit">Switch</button>
                     </form>
@@ -91,12 +91,12 @@
                 </div>
                 <h4 class="text-warning">Golden Subscription</h4>
                 <div>
-                    <p>7 projects</p>
+                    <p class="text-warning">7 projects</p>
                 </div>
                 <hr>
                 @if(ViewBag.SubId != 2)
                 {
-                    <form asp-action="ChangeSub">
+                    <form asp-action="ChangeSubForMe" method="POST">
                         <input hidden type="text" name="subId" value="2">
                         <button class="btn btn-outline-primary" type="submit">Switch</button>
                     </form>
