--- a/src/Web/Views/Users/AllUsers.cshtml
+++ b/src/Web/Views/Users/AllUsers.cshtml
@@ -124,7 +124,7 @@
     {
     $.ajax(
     {
-    type: 'GET',
+    type: 'PUT',
     data: {
         email: email,
         subId: document.getElementById(email).value
