--- a/src/Web/Views/Shared/_BlueprintPartial.cshtml
+++ b/src/Web/Views/Shared/_BlueprintPartial.cshtml
@@ -25,6 +25,18 @@
     </div>
     <div class="" style="width: 500px;"> 
         <button class="btn btn-danger" onclick="addToIssue()">Add to issue</button>
+        <table class="table-hover table table-bordered">
+            <thead>
+                <tr>
+                    <td>
+                        <label for="" id='sensorname'></label>
+                    </td>
+                    <td>
+                        <label for="" id='sensortype'></label>
+                    </td>
+                </tr>
+            </thead>
+        </table>
         <canvas id="myChart">
     </div>
     <div style="width: 500px; height: 400px; overflow: scroll;">
